# TreasureHunter3D

./: CMakeLists.txt  README.md
docs/: RAPOR_OZETI.md
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
